<resources>
    <!-- Initial Activity -->
    <string name="app_name">Connect 4</string>
    <string name="action_settings">Configuració</string>
    <string name="btnHelp">Ajuda</string>
    <string name="btnInit">Comença la Partida</string>
    <string name="btnExit">Sortir</string>
    <string name="btnConsult">Consultar Partides</string>

    <!--- Help Activity -->
    <string name="HelpTitle">INSTRUCCIONS</string>
    <string name="backBtn">Torna</string>
    <string name="help">El joc consisteix en anar introduint fitxes en un tauler vertical amb l\'objectiu d\'alinear 4 consecutives del color assignat al jugador(roig) abans que el teu oponent.
        \n \n A cada torn, el jugador introdueix una fitxa a la columna triada(sempre i quan no estigui completa), i aquesta cau a la posiciió més baixa possible.
        \n \n Guanya la partida el jugador que primer aconsegueix alinaer 4 fitxes consecutives del seu color en horitzontal, vertical o diagonal.
        \n \n Si totes les columnes estan plenes i ningu ha aconseguit alinear-ne 4 fitxes, hi ha empat.</string>

    <!--- Configuration Activity -->
    <string name="ConfigurationTitle">Configuració</string>
    <string name="startBtn">Comença</string>
    <string name="alias">Alias</string>
    <string name="size">Mida de la Graella: </string>
    <string name="optionGrid1">5</string>
    <string name="optionGrid2">6</string>
    <string name="optionGrid3">7</string>
    <string name="time">Control del temps: </string>
    <string name="toastMSG">Si us plau, ompli tots els camps.</string>

    <!--- Configuration Activity -->
    <string name="GameTitle">Connect 4 Game</string>
    <string name="turn">Turn: </string>
    <string name="timeGame">Time: </string>
    <!--- Results Activity -->
    <string name="ResultsTitle">RESULTATS</string>
    <string name="ResultsTitle2">Resultats del joc</string>
    <string name="date">Data i Hora</string>
    <string name="diaHora">Data i Hora</string>
    <string name="resume">Valors del Log</string>
    <string name="valorLog">Valors del Log</string>
    <string name="email">E-Mail to send the log</string>
    <string name="emailDest">E-Mail del Destinatari</string>
    <string name="user">Tu: </string>
    <string name="ia">CPU: </string>
    <string name="cellsToFinish">Caselles per acabar: </string>

    <!--- Strings for the Log -->
    <string name="Alias">Alias:</string>
    <string name="SizeOfTheGrid">Size of the grid:</string>
    <string name="Win">Has Guanyat!!</string>
    <string name="Lose">Has Perdut!!</string>
    <string name="Draw">Has Empatat!!</string>
    <string name="Difference">Caselles de Diferencia</string>
    <string name="Left">Caselles Restants.</string>
    <string name="Time">No queda més temps! </string>
    <string name="You">Tu: </string>
    <string name="Player2">El teu Oponent: </string>
    <string name="sendResults">Enviar e-mail</string>
    <string name="subject">Resultats de la partida - Connect 4 Game</string>
    <string name="GameRun"> Partida en curs!</string>
    <string name="DatabaseLog">Database of Games</string>
    <string name="PLAYERS">Jugadors</string>
    <string name="save">Guardado</string>

    <!--- Consult Games Activity -->
    <string name="ConsultTitle">Acces Partides</string>

    <!-- Strings for the preferences -->
    <string name="userTitle">Nom d\'usuari</string>
    <string name="userSummary">Nom de l\'usuari</string>
    <string name="user_default">Usuari1</string>
    <string name="boardTitle">Mida de la Graella</string>
    <string name="boardSummary">Mida de la graella del joc</string>
    <string name="timeTitle">Control de Temps</string>
    <string name="timeSummary">Marcar per a limitar el temps de la partida</string>
    <string name="selectTimeTitle">Temps de Joc</string>
    <string name="selectTimeSummary">Marca el temps que vols com a limit</string>
    <string name="multiplayerTitle">Multijugador</string>
    <string name="multiplayerSummary">Marca si vols jugar en mode multijujador</string>
    <string name="titleDialog">Introdueix valor</string>

    <!--KEYS-->
    <string name="user_key">user</string>
    <string name="multiplayer_key">multiplayer</string>
    <string name="board_key">board</string>
    <string name="board_Default_key">7</string>
    <string name="time_key">time</string>
    <string name="selectTime_key">select_time</string>
</resources>
