<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/ConfigurationTitle">

        <EditTextPreference
            android:id="@+id/user_config"
            android:key="@string/user_key"
            android:title="@string/userTitle"
            android:summary="@string/userSummary"
            android:dialogTitle="@string/titleDialog"
            android:defaultValue="@string/user_default"/>

        <ListPreference
            android:id="@+id/board_config"
            android:key="@string/board_key"
            android:title="@string/boardTitle"
            android:summary="@string/boardSummary"
            android:dialogTitle="@string/titleDialog"
            android:entries="@array/board1"
            android:entryValues="@array/board2"
            android:defaultValue="7"/>

        <CheckBoxPreference
            android:id="@+id/time_config"
            android:key="@string/time_key"
            android:title="@string/timeTitle"
            android:summary="@string/timeSummary"
            android:defaultValue="true"/>


    </PreferenceCategory>
</PreferenceScreen>