<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.MainActivity"
    android:background="@color/background">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" >
    </android.support.v7.widget.Toolbar>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="243dp"
        android:adjustViewBounds="true"
        android:src="@drawable/connect4_title" />

    <Button
        android:id="@+id/btnHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/distanciabotons"
        android:drawableLeft="@drawable/help"
        android:drawablePadding="10dp"
        android:text="@string/btnHelp"
        android:backgroundTint="@color/colorAccent"/>

    <Button
        android:id="@+id/btnInit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/distanciabotons"
        android:drawableLeft="@drawable/connect4_logox30"
        android:drawablePadding="10dp"
        android:text="@string/btnInit"
        android:backgroundTint="@color/colorAccent"/>
    <Button
        android:id="@+id/btnConsult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/distanciabotons"
        android:drawablePadding="10dp"
        android:text="@string/ConsultTitle"
        android:drawableLeft="@drawable/icon_results"
        android:backgroundTint="@color/colorAccent"/>

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/botosortir"
        android:drawableLeft="@drawable/exit"
        android:drawablePadding="10dp"
        android:text="@string/btnExit"
        android:backgroundTint="@color/colorAccent"/>



</LinearLayout>